@@ -1,12 +1,10 @@
 ﻿// Copyright (c) 2015-2017, Saritasa. All rights reserved.
 // Licensed under the BSD license. See LICENSE file in the project root for full license information.
 
-using System.Collections;
-using System.Collections.Generic;
-
 namespace Saritasa.Tools.Domain.Exceptions
 {
     using System;
+    using System.Collections.Generic;
 #if !NETCOREAPP1_0 && !NETCOREAPP1_1 && !NETSTANDARD1_6
     using System.Runtime.Serialization;
 #endif
