@@ -58,6 +58,7 @@
     <Compile Include="IUnitOfWork.cs" />
     <Compile Include="IUnitOfWorkFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoryExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Saritasa.Tools.Domain.project.json" />
