@@ -3,6 +3,7 @@
 [*] Rename SecurityException to ForbiddenException.
 [+] Add ConflictException and UnauthorizedException.
 [+] Add Errors to ValidationException.
+[+] Extension methods for IRepository. GetOrAdd and GetOrThrow.
 
 0.1.0 [2016-11-14]
 [+] Initial release.
